# TEST

ceshi/: .gitignore  ReadMe.md  androidrun.bat  debug.sh  gtest_upload.sh  gtest单元测试框架使用手册.md  pull_lib.sh  pull_lib_android.sh  run.sh  sdkDemo.sln
ceshi/SDK/include/: cfgExport.h  cmdComDef.h  cmdExport.h  cmdReqDef.h  cmdRespDef.h  cmdTypeDef.h  config.h  dbInterface.h  errorExport.h  gaIntercmdExport.h  gaInterpluginExport.h  httpServerpluginExport.h  imsdk_api_for_pc.h  interfaceExport.h  lddcmdExport.h  lddpluginExport.h  mrtccmdExport.h  mrtcpluginExport.h  rtccmdExport.h  rtcpluginExport.h  secmsgcmdExport.h  secmsgpluginExport.h
ceshi/SDK/include/service/: VimCallBack.java  VimService.java  VimServicePresets.java
ceshi/SDK/include/service/extModel/: avpacket.h  extpacket.h  gaInterpacket.h  gapacket.h  mailpacket.h  mrtcpacket.h  packet.h  rtcpacket.h  sopstorepacket.h  tclpacket.h
ceshi/SDK/include/service/interface/: IAuthService.h  IAvService.h  IChatService.h  ICloudService.h  IConfigService.h  IContactService.h  IExtService.h  IFaceToFaceService.h  IFileService.h  IGaInterService.h  IGaService.h  IGroupService.h  IKssService.h  ILoggingService.h  IMClient.h  IMUnkown.h  IMailService.h  IRtcService.h  ISearchService.h  IService.h  ISopStoreService.h  ISysMsgService.h  ITclService.h  IUserService.h  jsonToolExport.h  jsonTransTool.h
ceshi/SDK/include/service/model/: Account.h  Chat.h  Contact.h  Emoticon.h  Group.h  LoginInfo.h  Member.h  Msg.h  Optional.h  Packet.h  SDKTypes.h  SysMsg.h  TinyGroup.h  User.h
ceshi/SDK/include/service/sdkCore/: SdkConfig.h
ceshi/SDK/lib/linux/: linkdood.crt
ceshi/SDK/lib/linux/fangde/: libcrypto.so.1.1  libssl.so.1.1
ceshi/SDK/lib/linux/fangde/sdkplugins/: config.cfg
ceshi/SDK/lib/linux/longxin/: libcrypto.so.1.1  libssl.so.1.1
ceshi/SDK/lib/linux/yinhe/: libcrypto.so.1.1  libssl.so.1.1
ceshi/SDK/lib/linux/zhaoxin/: libcrypto.so.1.1  libssl.so.1.1
ceshi/SDK/lib/mac/: libcimg.dylib  libcrypto.1.1.dylib  libssl.1.1.dylib
ceshi/SDK/lib/mac/sdkplugins/: config.cfg
ceshi/SDK/lib/win/: service.lib
ceshi/SDK/lib/win/sdkplugins/: config.cfg
ceshi/other/: android.sh  build.bat  draw.py  gtest_parser.py  gtest_template.html  monitor.py  start.bat  startUnitest.bat  str.sh  toolConfig.xml
ceshi/sdkUnitest/: CMakeLists.txt  Environment.h  LogError.cpp  LogError.h  TestConfig.cpp  TestConfig.h  UnusedService.h  allTests.cpp  gmock-test.cpp  gmock-test.h  main.cpp  memory.hpp  parson.c  parson.h  sdkUnitest.vcxproj  sdkUnitest.vcxproj.filters  sdk_unitest.cpp  sdk_unitest.h  semer.hpp  tinyxml2.cpp  tools.cpp  tools.h  unitest_auth.cpp  unitest_auth.h  unitest_chat.cpp  unitest_chat.h  unitest_cloud.cpp  unitest_cloud.h  unitest_comm.cpp  unitest_comm.h  unitest_config.cpp  unitest_config.h  unitest_contact.cpp  unitest_contact.h  unitest_ext.cpp  unitest_ext.h  unitest_file.cpp  unitest_file.h  unitest_gainter.cpp  unitest_gainter.h  (+10 more)
ceshi/sdkUnitest/arcbuild/: boot.cmake
ceshi/sdkUnitest/gtest/include/gtest/: gtest.h
ceshi/sdkUnitest/gtest/include/gtest/internal/: gtest-port.h
ceshi/sdkUnitest/jni/: Android.mk  Application.mk
ceshi/xmlconfig/: config.xml  imconfig.xml  uploadFilePath.txt  vrvconfig.xml  测试文件.txt
